force-app/main/default/objects/KlopotekClassification__c/KlopotekClassification__c.object-meta.xml
<CustomObject>
    <label>Klopotek Classification</label>
    <nameField>
        <displayFormat>KC-{0000000}</displayFormat>
        <label>Klopotek Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Klopotek Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>