force-app/main/default/objects/KlopotekClassification__c/fields/CatCode__c.field-meta.xml
<CustomField>
    <fullName>CatCode__c</fullName>
    <label>CAT_CODE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>