force-app/main/default/objects/KlopotekClassification__c/fields/CatText__c.field-meta.xml
<CustomField>
    <fullName>CatText__c</fullName>
    <label>CAT_TEXT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>