force-app/main/default/objects/KlopotekClassification__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Klopotek Classifications</relationshipLabel>
    <relationshipName>Klopotek_Classifications</relationshipName>
    <type>Lookup</type>
</CustomField>