force-app/main/default/objects/KlopotekClassification__c/fields/DocNr__c.field-meta.xml
<CustomField>
    <fullName>DocNr__c</fullName>
    <description>Teacher Number</description>
    <inlineHelpText>Teacher Number</inlineHelpText>
    <label>DOCNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>