force-app/main/default/objects/KlopotekClassification__c/fields/IdClassification__c.field-meta.xml
<CustomField>
    <fullName>IdClassification__c</fullName>
    <label>ID_CLASSIFICATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>