force-app/main/default/objects/KlopotekClassification__c/fields/IdJuristicPersonContact__c.field-meta.xml
<CustomField>
    <fullName>IdJuristicPersonContact__c</fullName>
    <label>ID_JURISTIC_PERSON_CONTACT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>