force-app/main/default/objects/KlopotekClassification__c/fields/IdJuristicPersonInstituut__c.field-meta.xml
<CustomField>
    <fullName>IdJuristicPersonInstituut__c</fullName>
    <label>ID_JURISTIC_PERSON_INSTITUUT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>