force-app/main/default/objects/KlopotekClassification__c/fields/SchNr__c.field-meta.xml
<CustomField>
    <fullName>SchNr__c</fullName>
    <description>School Number</description>
    <externalId>true</externalId>
    <inlineHelpText>School Number</inlineHelpText>
    <label>SCHNR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>