force-app/main/default/objects/KlopotekClassification__c/fields/ValueDecimal__c.field-meta.xml
<CustomField>
    <fullName>ValueDecimal__c</fullName>
    <label>VALUE_DECIMAL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>