force-app/main/default/objects/KlopotekClassification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CatCode__c</columns>
    <columns>CatText__c</columns>
    <columns>DocNr__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>