force-app/main/default/objects/KlopotekClassification__c/listViews/This_week.listView-meta.xml
<ListView>
    <fullName>This_week</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>CatCode__c</columns>
    <columns>DocNr__c</columns>
    <columns>SchNr__c</columns>
    <columns>ValueDecimal__c</columns>
    <columns>IsProcessed__c</columns>
    <columns>OperatingCompany__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>Created this week</label>
</ListView>